# opengl-project-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.py
app/: CMakeLists.txt  main.cpp
app/include/App/: ImGUINodes.hpp  ImGuiStyle.hpp  Structures.hpp
app/src/: ImGUINodes.cpp  ImGUIStyle.cpp  main.cpp
cmake/: glad.cmake  imgui.cmake  imguizmo.cmake
core/: CMakeLists.txt
core/include/Core/: Camera.hpp  DebugCallbacks.hpp  FileIO.hpp  Structures.hpp  SystemInfo.hpp
core/include/Core/Base/: NonCopyableNonMovable.hpp
core/include/Core/Default/: DefaultShaders.hpp  DefaultVertexLayouts.hpp
core/include/Core/OpenGL/: Buffer.hpp  Framebuffer.hpp  Program.hpp  Texture.hpp  VertexArray.hpp
core/include/Core/Renderer/: DynamicRenderer.hpp
core/include/Core/Utils/: GenerateData.hpp  RayPicking.hpp
core/src/: Buffer.cpp  Camera.cpp  DebugCallbacks.cpp  DefaultShaders.cpp  DefaultVertexLayouts.cpp  DynamicRenderer.cpp  FileIO.cpp  Framebuffer.cpp  GenerateData.cpp  Program.cpp  RayPicking.cpp  Structures.cpp  SystemInfo.cpp  Texture.cpp  VertexArray.cpp
core/src/Linux/: SystemInfo.hpp
core/src/Win32/: SystemInfo.hpp
include/: Buffer.hpp  Camera.hpp  DebugCallbacks.hpp  DefaultShaders.hpp  DefaultVertexLayouts.hpp  Program.hpp  Structures.hpp  VertexArray.hpp  VertexBufferLayout.hpp
src/: Buffer.cpp  Camera.cpp  DebugCallbacks.cpp  Program.cpp  VertexArray.cpp
